typescript/checker/tests/conformance/expressions/functionCalls/forgottenNew.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            67,
        ),
        hi: BytePos(
            83,
        ),
        ctxt: #0,
    },
    callee: Arc(
        Class(
            Class {
                span: Span {
                    lo: BytePos(
                        27,
                    ),
                    hi: BytePos(
                        47,
                    ),
                    ctxt: #0,
                },
                is_abstract: false,
                name: Some(
                    Atom('NullLogger' type=dynamic),
                ),
                super_class: None,
                body: [],
                type_params: None,
            },
        ),
    ),
}
 --> $DIR/tests/conformance/expressions/functionCalls/forgottenNew.ts:5:14
  |
5 | var logger = Tools.NullLogger();
  |              ^^^^^^^^^^^^^^^^

